--- a/templates/web/base/around/display_location.html
+++ b/templates/web/base/around/display_location.html
@@ -7,7 +7,7 @@
         = pc
         ? c.uri_for( "/rss/pc", pc )
         : c.uri_for( "/rss/l/$latitude,$longitude" );
-            
+
     email_url = c.uri_for(
         '/alert/list',
         {
@@ -71,31 +71,31 @@
     </div>
 
 
+    <div id="map_sidebar">
 
-
-    <div id="side">
-
-        [% IF allow_creation %]
+        <div id="side">
+          [% IF allow_creation %]
             [% INCLUDE 'around/_report_banner.html' %]
             [% TRY %][% INCLUDE 'around/extra_text.html' %][% CATCH file %][% END %]
-        [% END %]
+          [% END %]
 
-        [% INCLUDE 'around/_updates.html' %]
+          [% INCLUDE 'around/_updates.html' %]
+          <section class="full-width">
+              [% INCLUDE "around/tabbed_lists.html" %]
+          </section>
+        </div>
 
-        <section class="full-width">
-            [% INCLUDE "around/tabbed_lists.html" %]
-        </section>
+      [% IF allow_creation %]
+        <div style="display:none" id="side-form">
+        [% INCLUDE "report/new/fill_in_details_form.html"
+            js = 1,
+            report.used_map = 1
+            report.name = c.user.name
+        %]
+        </div>
+      [% END %]
+
     </div>
-
-    [% IF allow_creation %]
-    <div style="display:none" id="side-form">
-    [% INCLUDE "report/new/fill_in_details_form.html"
-        js = 1,
-        report.used_map = 1
-        report.name = c.user.name
-    %]
-    </div>
-    [% END %]
 
 [% IF allow_creation %]
 </form>
