Remove all the #fms_pan_zoom top position hacks
No need to set a custom position for #fms_pan_zoom in each
cobrand now that the header is no longer obscuring the top
of the map.

--- a/web/cobrands/sass/_base.scss
+++ b/web/cobrands/sass/_base.scss
@@ -1085,7 +1085,7 @@ html.js #map .noscript {
 // OpenLayers fix for navigation being top right
 // Left and right so that zoom can be left, pan right.
 #fms_pan_zoom {
-  top: 0.5em;
+  top: 0.5em !important;
   #{$left}: 0.5em !important;
   #{$right}: 0.5em !important;
 }
