--- a/web/cobrands/sass/_base.scss
+++ b/web/cobrands/sass/_base.scss
@@ -829,25 +829,13 @@ input.final-submit {
 
 .big-green-banner {
   position: relative;
-  top:-1.75em;
+  top: -1.75em;
   background: $col_click_map;
   color: #fff;
-  padding:1em;
-  text: {
-    transform:uppercase;
-    align:center;
-  }
-  font-size:0.875em;
-  &:before {
-    content: "";
-    #{$left}: -0.5em;
-    top:0;
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-#{$left}: 0.5em solid transparent;
-    border-bottom: 0.5em solid $col_click_map_dark;
-  }
+  padding: 1em;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 0.875em;
 }
 
 .banner {
