--- a/templates/web/base/report/_main.html
+++ b/templates/web/base/report/_main.html
@@ -53,8 +53,7 @@
     [% END %]
 
     <p class="report_meta_info">
-        [% problem.meta_line(c) | html %]
-        [%- IF !problem.used_map AND c.cobrand.moniker != 'emptyhomes' %]; <strong>([% loc('there is no pin shown as the user did not use the map') %])</strong>[% END %]
+        [% INCLUDE 'report/_report_meta_info.html' %]
     </p>
     [% IF problem.bodies_str %]
         [% INCLUDE 'report/_council_sent_info.html' %]
