--- a/templates/web/base/tokens/confirm_problem.html
+++ b/templates/web/base/tokens/confirm_problem.html
@@ -8,7 +8,6 @@
     [% IF c.cobrand.owns_problem( report ) %]
         <h2>Your issue is on its way to the council.</h2>
         <p>Your reference for this report is [% report.id %], please quote it in any enquiries.</p>
-        <p><a class="green-btn" href="[% c.cobrand.base_url_for_report( report ) %][% report.url %]">View report</a></p>
     [% ELSE %]
         <h2>Thank you for your report.</h2>
         <p>
@@ -18,10 +17,7 @@
             <b>[% report.body %]</b>
         </p>
         <p>
-            You can follow this problem on the main FixMyStreet website.
-        </p>
-        <p>
-            <a class="green-btn" href="[% c.cobrand.base_url_for_report( report ) %][% report.url %]">Go to FixMyStreet</a>
+            You can follow this problem on <a href="[% c.cobrand.base_url_for_report( report ) %][% report.url %]">FixMyStreet.com</a>.
         </p>
      [% END %]
 
