--- a/web/cobrands/sass/_layout.scss
+++ b/web/cobrands/sass/_layout.scss
@@ -314,6 +314,10 @@ body.mappage {
     width: auto; // stretch from right edge of sidebar to left edge of window
     height: auto; // stretch from bottom of header to bottom of window
     margin: 0;
+
+    &.with-notes {
+      left: 44em;
+    }
   }
 
   #map_sidebar {
@@ -327,6 +331,12 @@ body.mappage {
     overflow: auto; // vertical scrollbar when list is taller than window
     background-color: #fff; // since no longer in the flow inside .content
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+
+    &.with-notes {
+      width: 42em;
+      background: -webkit-linear-gradient(90deg, transparent 28em, #E9F2FF 28em);
+      background: linear-gradient(90deg, transparent 28em, #E9F2FF 28em);
+    }
   }
 
   .banner {
@@ -844,40 +854,31 @@ textarea.form-error {
   @include border-radius(0 0 0.25em 0.25em);
 }
 
-#report-a-problem-sidebar {
-    position: absolute;
-    #{$left}: 29em;
-    width: 15em;
-    @include box-shadow(rgba(0, 0, 0, 0.6) 0px 0px 4px 1px);
+// If the form is .with-notes, limit the width of the inputs
+// to make space for the #report-a-problem-sidebar.
+#report-a-problem-main {
+  .with-notes & {
+    width: 26em;
+  }
 }
 
-// Report a problem sidebar notes
+// Notes presented alongside the reporting form
 #report-a-problem-sidebar {
-  top:5em;
+  margin-bottom: 2em;
+
+  // If the parent is .with-notes we know we have space to
+  // float the sidebar content to the side of the form.
+  .with-notes & {
+    float: right;
+    width: 13em;
+  }
+
   div {
-    padding:1em;
-    font-size:0.75em;
-    background:#eeeeee;
+    font-size: 0.75em;
   }
-  .sidebar-notes {
-    background:#333333;
-    color:#ffffff;
-  }
-}
-.ie6, .ie7 {
-  #report-a-problem-sidebar {
-    #{$left}: 28.5em; // 0.5em left margin gone on .content in IE6/7, so reduce this accordingly.
-    z-index: 1;
-  }
-}
 
-.no-js #report-a-problem-sidebar {
-  position: static;
-  width: auto;
-  @include box-shadow(rgba(0, 0, 0, 0) 0 0 0);
-  .sidebar-tips,
   .sidebar-notes {
-    font-size:1em;
+    color: #666;
   }
 }
 
