Look up sidebar early, to set a body class if present.
Be sure to update size if changing on clicking back too.

--- a/templates/web/base/around/display_location.html
+++ b/templates/web/base/around/display_location.html
@@ -28,6 +28,7 @@
     );
 
     PROCESS "maps/${map.type}.html" around_page = 1;
+    sidebar_html = PROCESS 'report/new/sidebar.html' js = 1 report.used_map = 1;
 
     SET bodyclass = 'mappage';
     SET rss = [ tprintf(loc('Recent local problems, %s', "%s is the site name"), site_name), rss_url ];
