--- a/templates/web/base/report/new/fill_in_details.html
+++ b/templates/web/base/report/new/fill_in_details.html
@@ -1,6 +1,9 @@
 [%
+    sidebar_html = PROCESS 'report/new/sidebar.html';
+
     SET bodyclass = '';
     SET bodyclass = 'mappage' IF report.used_map;
+    SET bodyclass = bodyclass _ " with-notes" IF sidebar_html;
     PROCESS "maps/${map.type}.html" IF report.used_map;
     INCLUDE 'header.html', title => loc('Reporting a problem');
 %]
