If returning from server, is in side, not side-form.

--- a/web/cobrands/sass/_layout.scss
+++ b/web/cobrands/sass/_layout.scss
@@ -835,7 +835,7 @@ textarea.form-error {
 
 // If the form is .with-notes, limit the width of the inputs
 // to make space for the #report-a-problem-sidebar.
-#side-form {
+#side-form, #side {
   .with-notes & {
     width: 27em;
   }
