--- a/web/cobrands/stevenage/base.scss
+++ b/web/cobrands/stevenage/base.scss
@@ -44,3 +44,9 @@ $heading-font: 'PTSansCaptionRegular', "PT Sans Caption", Verdana, Arial, sans-s
 
 @import "council_header";
 @import "council_header_responsive";
+
+body.mappage {
+    #stevenage_cc_header {
+        display: none;
+    }
+}
