--- a/web/cobrands/stevenage/layout.scss
+++ b/web/cobrands/stevenage/layout.scss
@@ -12,7 +12,31 @@
     padding-bottom: 0.25em;
     background-color: #6b6969;
     @include background(linear-gradient(#6b6969, #555454));
+
+    .iel8 & {
+      background-color: #6b6969;
+    }
   }
+}
+
+// We use absolute positioning for the header on IE7,
+// because IE7 doesn't support the table-caption styles.
+// This means, we need to make sure page content doesn't
+// disappear behind the header.
+.ie6, .ie7 {
+    .content {
+        margin-top: 10em;
+    }
+
+    .frontpage {
+        #front-main {
+            margin-top: 15em;
+        }
+
+        .content {
+            margin-top: 0;
+        }
+    }
 }
 
 #main-nav {
@@ -23,33 +47,17 @@
     padding-left: 0;
 }
 
-.ie6, .ie7 {
-    // 452ce6a0 - Added IE6/7 position change to front page header too
-    #stevenage_cc_header {
-        position:absolute;
-        top:0;
-    }
-    // 39ec0005 - Removed position static from nav in IE6/7
-    .nav-wrapper {
-        .nav-wrapper-2 {
-            position: absolute;
-        }
-    }
 
-    .content {
-        margin-top: 7em;
-    }
-}
-
-// d523b431
 .nav-menu {
     float: none;
 }
+
 .nav-menu a, .nav-menu span {
     margin: 0;
     margin-right: 2px;
     font-family: 'PTSansRegular', "PT Sans", Verdana, Arial, sans-serif;
 }
+
 .nav-menu--main {
     a, span {
         padding: 0.5em 0.75em;
@@ -66,14 +74,6 @@
     span {
         color: #fff;
         background-color: #066539;
-    }
-}
-
-// 452ce6a0 - "Added IE6/7 position change to front page header too" -
-// turned off border for ie6-8 .content - why, as box-shadow still on?
-.iel8 {
-    .content {
-        border: none;
     }
 }
 
@@ -150,13 +150,6 @@ body.frontpage {
   }
 }
 
-// 0c5d50bc - Added margin to front page report box to push below nav in IE6/7
-.ie6, .ie7 {
-    #front-main {
-        margin-top: 5.5em;
-    }
-}
-
 @media only screen and (min-width: 48em) and (max-width: 61em) {
     // f432a72d - moved sticky sidebars down a bit to account for the larger header
     body.twothirdswidthpage {
@@ -176,6 +169,13 @@ body.mappage {
         // content sidebar down beyond .nav-wrapper-2
         height: 3em;
         display: block;
+
+        // For reasons beyond my comprehension, the 3em
+        // height results in a 3em gap in IE8. I assume
+        // some bug with table-cell / table-caption?
+        .ie8 & {
+            height: 0;
+        }
     }
 
     // Over-specific selector required to trump _layout.scss
@@ -212,6 +212,23 @@ body.mappage {
     .nav-menu a:focus,
     a.report-a-problem-btn {
         color: #fff;
+    }
+
+    // _layout.scss adds 4em of padding to leave space for
+    // an absolutely positioned menu, but I can't tell what
+    // that means. Stevenage, at least, doesn't need it.
+    .wrapper {
+        .ie7 & {
+            padding-top: 0;
+        }
+    }
+
+    // Not sure why IE7 has the old style of "inset" or "floating"
+    // sidebar on the map page, but this makes it stop!
+    .container {
+        .ie7 & {
+            margin-left: 0;
+        }
     }
 
 }
